feat(paper): add managed lobby runtime